--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
     <string name="action_settings">Settings</string>
+    <string name="true_button">true</string>
+    <string name="false_button">false</string>
+    <string name="question_text">Constantinopole is the largst city in Turkey</string>
 </resources>
