--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,12 @@
     <string name="action_settings">Settings</string>
     <string name="true_button">true</string>
     <string name="false_button">false</string>
-    <string name="question_text">Constantinopole is the largst city in Turkey</string>
     <string name="correct_text">Correct !!</string>
     <string name="incorrect_text">Incorrect !!!</string>
+    <string name="next_button">Next</string>
+    <string name="question_ocean">The Pacific Ocean is larger than the Atlantic Ocean.</string>
+    <string name="question_africa">The source of Nile river is in Egypt.</string>
+    <string name="question_america">The amazon river is the longest river in America.</string>
+    <string name="question_asia">Lake Baikal is the world's oldest and deepest fresh water lake.</string>
+    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian ocena.</string>
 </resources>
