chapter 2 all problems solved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="question_america">The amazon river is the longest river in America.</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest fresh water lake.</string>
     <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian ocena.</string>
+    <string name="previous">Prev</string>
 </resources>
